# rapid-adk-debug-engine

./: .gitignore  README.md  pyproject.toml
scripts/: backfill_agent_module_metadata.py
src/rapid_debug_engine/: __init__.py  client.py  config_sync.py  liveness.py  middleware.py  observe.py  registry.py  shadow.py  tags.py
src/rapid_observatory/: __init__.py  client.py  config_sync.py  middleware.py  registry.py  shadow.py  tags.py
tests/: test_client.py  test_client_upload_events.py  test_config_sync.py  test_liveness.py  test_middleware.py  test_observe.py  test_registry.py  test_shadow.py
