[project]
name = "rapid-observatory-sdk"
version = "0.1.0"
description = "Python SDK for the AI Agent Observatory — agent registry, config sync, shadow-mode, span enrichment"
requires-python = ">=3.10"
authors = [{ name = "Rapid Platform" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]
pubsub = [
    "google-cloud-pubsub>=2.23.0",
]
fastapi = [
    "starlette>=0.37.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "starlette>=0.37.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
